--- a/index.html
+++ b/index.html
@@ -1,1 +1,59 @@
-<h1>hello</h1>
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Loop Machine</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    />
+    <link href="style.css" rel="stylesheet" />
+    <!--my custom css-->
+
+    <link
+      href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css"
+      rel="stylesheet"
+    />
+  </head>
+
+  <body>
+    <div class="container">
+      <div class="row">
+        <div class="col-6 box mx-auto">
+          <h1 class="text-center">Loop Studio</h1>
+        </div>
+      </div>
+
+      <div id="music_box" class="col-6 mx-auto"></div>
+
+      <div class="row" id="controls ">
+        <div class="col-4 mx-auto">
+          <button id="play_btn" data-id="" class="btn-sm btn-primary play_btn">
+            Play
+          </button>
+          <button id="stop_btn" data-id="" class="btn-sm btn-primary stop_btn">
+            Stop
+          </button>
+
+          <span>Loop Music</span>
+          <label class="switch1"
+            ><input
+              type="checkbox"
+              class="loop_toggle"
+              name="loop_switch" /><span class="slider round"></span
+          ></label>
+        </div>
+      </div>
+    </div>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
+    <script src="myscripts.js"></script>
+  </body>
+</html>
