--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Loop Machine</title>
+
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -19,11 +19,17 @@
     />
   </head>
 
+  <!-- header -->
+  <div class="demo-title">
+    <h1 class="display-1">🎸 Loop Machine 🎶</h1>
+    <p><h2>Many Voice, Harmony</h2></p>
+  </div>
+
   <body>
     <div class="container">
       <div class="row">
         <div class="col-6 box mx-auto">
-          <h1 class="text-center">Loop Studio</h1>
+         
         </div>
       </div>
 
