--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!-- header -->
   <div class="demo-title">
     <h1 class="display-1">🎸 Loop Machine 🎶</h1>
-    <p><h2>Many Voice, Harmony</h2></p>
+    <p><h2>Many Voices, Harmony...</h2></p>
   </div>
 
   <body>
